Improved the media stage deletion on the media explorer gallery by adding ranger staging

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -209,6 +209,7 @@
             --page-content-static-width: 1440px;
             --page-lateral-spacing: calc(calc(100vw - var(--page-content-width)) / 2);
             --backdrop-filer-blur: blur(3px);
+            --shadow-1: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 
             scrollbar-width: none;
     }
