--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -212,6 +212,8 @@
             --backdrop-filer-blur: blur(3px);
             --shadow-1: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 
+            --border-thin-grey: 1px solid var(--grey-7);
+
             scrollbar-width: none;
     }
 }
@@ -419,7 +421,6 @@
 /*=============================================
 =            Text Styles            =
 =============================================*/
-
     .highlight-text {
         font-family: var(--font-titles);
         font-size: var(--font-size-2);
@@ -476,7 +477,6 @@
     .html-tag > span {
         color: var(--grey-4);
     }
-
 /*=============================================
 =            Buttons and Inputs            =
 =============================================*/
@@ -593,8 +593,6 @@
             background: var(--danger-8);
         }
     }
-
-
     /*----------  Libery Labs buttons  ----------*/
 
         .button-1-wrapper {
@@ -686,7 +684,6 @@
         }
 
     }
-
 /*=============================================
 =            Debug            =
 =============================================*/
