Add styling for dungeon-tag-container to have the same behavior as dungeon-tag-list but with the flexibility to change background colors and paddings, etc

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -441,6 +441,13 @@
         }
     }
 
+    .dungeon-tag-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: start;
+        gap: var(--spacing-1);
+    }
+
     .dungeon-tag-list {
         display: flex;
         flex-wrap: wrap;
