--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -276,6 +276,7 @@
             --backdrop-filer-blur: blur(3px);
             --shadow-1: 0 0 10px 0 rgba(0, 0, 0, 0.1);
             --shadow-2: 0 0 var(--spacing-2) calc(var(--spacing-2) * 0.1) hsl(from var(--grey-4) h s l / 0.14);
+            --shadow-2-perspective: 0 10px var(--spacing-3) calc(var(--spacing-2) * 0.1) hsl(from var(--grey-4) h s l / 0.14);
 
 
             scrollbar-width: none;
