fix: Update background color variable in libery-dungeon-window for consistency

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -509,7 +509,7 @@
     }
 
     .libery-dungeon-window {
-        background: var(--grey-9);
+        background: var(---body-bg-color);
         border-radius: var(--border-radius);
         border: 1px solid var(--main-dark);
     }
