feat: in the MediaTagger component, changed the printAllRegistry method so that it highlights the current registry.

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -633,6 +633,26 @@
         }
     }
 
+    
+    /*=============================================
+    =            Color highligthed text            =
+    =============================================*/
+    
+        .text-highlight--main {
+            color: var(--main);
+            font-weight: 600;
+        }
+
+        .text-highlight--main-dark {
+            color: var(--main-dark);
+            font-weight: bolder;
+        }
+
+    
+    /*=====  End of Color highligthed text  ======*/
+    
+    
+
     .highlight-text--CTA {
         font-family: var(--font-titles);
         font-size: var(--font-size-CTA-1);
