--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -633,6 +633,30 @@
         }
     }
 
+    .small-text {
+        font-size: var(--font-size-1);
+        line-height: 1.2;
+        
+        & > p {
+            font-size: inherit;
+            line-height: inherit;
+        }
+    }
+
+    .dungeon-description {
+        font-size: var(--font-size-1);
+        line-height: 1.2;
+        
+        & > p {
+            font-size: inherit;
+            line-height: inherit;
+        }
+
+        & strong, b {
+            color: var(--main-4);
+            font-weight: 600;
+        }
+    }
     
     /*=============================================
     =            Color highligthed text            =
@@ -650,8 +674,6 @@
 
     
     /*=====  End of Color highligthed text  ======*/
-    
-    
 
     .highlight-text--CTA {
         font-family: var(--font-titles);
