feat: added a class for styling unimportant text.

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -657,6 +657,10 @@
             font-weight: 600;
         }
     }
+
+    .dungeon-generic-text {
+        color: var(--grey-3);
+    }
     
     /*=============================================
     =            Color highligthed text            =
