fix: changed the way the blend animations where implemented for the ExplorerBillboard so that they triggered each time  a media was changed.

--- a/apps/libery_dungeon/src/app.css
+++ b/apps/libery_dungeon/src/app.css
@@ -1021,6 +1021,24 @@
         animation: shake-vertical 1s ease-in-out infinite;
     }
 
+    @keyframes billboard-fade-in {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes billboard-fade-out {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+
 /*=====  End of Animations  ======*/
 /*=============================================
 =            Mobile            =
